[gd_scene load_steps=3 format=2]

[ext_resource path="res://games/tic-tac-toe/TicTacToe.gd" type="Script" id=1]
[ext_resource path="res://games/tic-tac-toe/GridValues.gd" type="Script" id=5]

[node name="TicTacToe" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
player_turn_label_path = NodePath("VBoxContainer/PlayerTurn")
winning_label_path = NodePath("WinOverlay/CenterContainer/VBoxContainer/Winning")
win_overlay_path = NodePath("WinOverlay")

[node name="GridValues" type="Node" parent="."]
script = ExtResource( 5 )
grid_path = NodePath("../VBoxContainer/MarginContainer/GridContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTurn" type="Label" parent="VBoxContainer"]
margin_right = 1080.0
margin_bottom = 16.0
align = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 1080.0
margin_bottom = 1920.0
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainer"]
margin_right = 1080.0
margin_bottom = 1900.0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinOverlay" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="WinOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="WinOverlay"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WinOverlay/CenterContainer"]
margin_left = 498.0
margin_top = 918.0
margin_right = 606.0
margin_bottom = 1002.0
custom_constants/separation = 20

[node name="Winning" type="Label" parent="WinOverlay/CenterContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 16.0
text = "You win!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WinOverlay/CenterContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 108.0
margin_bottom = 84.0

[node name="Retry" type="Button" parent="WinOverlay/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 108.0
margin_bottom = 22.0
text = "Play again"

[node name="BackMenu" type="Button" parent="WinOverlay/CenterContainer/VBoxContainer/VBoxContainer"]
margin_top = 26.0
margin_right = 108.0
margin_bottom = 48.0
text = "Back to menu"

[connection signal="grid_changed" from="GridValues" to="." method="_on_GridValues_grid_changed"]
[connection signal="pressed" from="WinOverlay/CenterContainer/VBoxContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="WinOverlay/CenterContainer/VBoxContainer/VBoxContainer/BackMenu" to="." method="_on_BackMenu_pressed"]
